# GoIT_WEB_HW_14

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 1827a96deef9_add_users_table.py  2a2f790eaa82_refresh_token_nullable_true.py  5aaef6432561_init.py  b0c849f4d1b6_add_created_at_confirmed.py  d0370f1f1901_longer_password.py  eb3743963bd4_add_avatar_url_for_users.py
my_contacts/: schemas.py
my_contacts/database/: db_connect.py  models.py
my_contacts/repository/: contacts.py  users.py
my_contacts/routes/: auth.py  contacts.py  users.py
my_contacts/services/: auth.py  send_email.py
templates/: email_signup.html  info_email_reset_success.html  reset_password.html  send_email_reset.html
tests/: conftest.py  test.db  test_route_auth.py
tests/repository/: test_contacts.py  test_users.py
